fix button gallery wrap

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -357,6 +357,7 @@ body {
 .gallery__filter {
 	display: flex;
 	grid-gap: 20px;
+	flex-wrap: wrap;
 }
 .gallery__filter_button {
 	display: flex;
